# ESP32_BLDC

./: .gitignore  README.md
ESP32_BLDC_FW/: .cproject  .project  sdkconfig  sdkconfig.old
ESP32_BLDC_FW/main/: CMakeLists.txt  HAL.c  HAL.h  bldc_hal.c  bldc_hal.h  bldc_math.c  bldc_math.h  main.c  motor_model.c  motor_model.h  project_config.h  tasks.c  tasks.h  tasks_common.h
ESP32_BLDC_HW/ESP32S3_DRV8329_MC/: #auto_saved_files#  ESP32S3_DRV8329_MC.kicad_prl  ESP32S3_DRV8329_MC.kicad_pro  ESP32S3_DRV8329_MC.kicad_sch  _autosave-ESP32S3_DRV8329_MC.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
